--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 html,
 body,
-#root {
+#mfe-root,
+#mfe-test {
   padding: 0;
   margin: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.87);
 }
